<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="@color/orange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- User Greeting TextView -->
        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:gravity="center|bottom"
            android:textColor="@android:color/white"
            android:background="@color/orange"
            android:textStyle="bold"/>

        <!-- Info TextView -->
        <TextView
            android:id="@+id/info_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Hi_User"
            android:textSize="14sp"
            android:gravity="center|top"
            android:textColor="@android:color/white"
            android:background="@color/orange"
            android:textStyle="bold"
            android:layout_marginBottom="50dp"/>

        <!-- CardView for Category -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="28dp"
            app:cardElevation="4dp"
            android:layout_marginBottom="-20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <!-- Category Title TextView -->
                <TextView
                    android:id="@+id/category_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/category"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <!-- Horizontal LinearLayout for Items -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- ToDoList TextView -->
                    <TextView
                        android:id="@+id/notes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="12dp"
                        android:gravity="center_horizontal"
                        android:text="@string/note"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:drawableTopCompat="@drawable/drawable_checklist_with_background"
                        app:drawableTint="@color/orange" />

                    <!-- Events TextView -->
                    <TextView
                        android:id="@+id/event"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="12dp"
                        android:gravity="center_horizontal"
                        android:text="@string/events"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:drawableTopCompat="@drawable/drawable_event_with_background"
                        app:drawableTint="@color/orange" />

                    <!-- Vertical LinearLayout fo News TextView -->
                    <LinearLayout
                        android:id="@+id/news_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginBottom="14dp"
                            android:src = "@drawable/news_with_stroke"/>
                        <TextView
                            android:id="@+id/news"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/news_feeds"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            app:drawableTint="@color/orange" />
                    </LinearLayout>


                </LinearLayout>

                <!-- Main Category TextView -->
                <TextView
                    android:id="@+id/main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/main"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <!-- Contacts TextView -->
                <TextView
                    android:id="@+id/allInOneChat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:drawablePadding="12dp"
                    android:text="@string/all_in_one_chat"
                    android:gravity="center_vertical|start"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/baseline_chat_24" />

                <!-- Social Media TextView -->
                <TextView
                    android:id="@+id/social_media"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/social_media"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <!-- Social Media Items -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:orientation="vertical">

                    <!-- YouTube TextView -->
                    <LinearLayout
                        android:id="@+id/youtube"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginBottom="10dp"
                            android:src = "@drawable/youtube"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:drawablePadding="12dp"
                            android:text="@string/youtube"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <!-- Facebook TextView -->
                    <LinearLayout
                        android:id="@+id/Facebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="45dp"
                            android:layout_marginBottom="18dp"
                            android:src = "@drawable/facebook"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:drawablePadding="12dp"
                            android:text="@string/facebook"
                            android:gravity="center_vertical|start"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />


                    </LinearLayout>


                    <!-- Instagram TextView -->
                    <LinearLayout
                        android:id="@+id/instagram"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginBottom="12dp"
                            android:src = "@drawable/instagram"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:drawablePadding="12dp"
                            android:text="@string/instagram"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <!-- SnapChat TextView -->
                    <LinearLayout
                        android:id="@+id/snapchat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginBottom="10dp"
                            android:src = "@drawable/snabchat"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:drawablePadding="12dp"
                            android:text="@string/snapchat"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <!-- TikTok TextView -->
                    <LinearLayout
                        android:id="@+id/tiktok"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginBottom="12dp"
                            android:src = "@drawable/tiktok"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:drawablePadding="12dp"
                            android:text="@string/tiktok"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
